# practive-QT

./: README.md
QObject/: CMakeLists.txt  main.cpp  test.cpp  test.h
QObject_2/: CMakeLists.txt  cat.cpp  cat.h  main.cpp
QT6_ep14_Qt-style-input-output/: CMakeLists.txt  main.cpp
QT6_ep16_OS/: CMakeLists.txt  main.cpp
QT6_ep21_QThread/: CMakeLists.txt  main.cpp  worker.cpp  worker.h
QT6_ep22_threads-communication/: CMakeLists.txt  main.cpp  worker.cpp  worker.h
QT6_ep24_Qt-concurrent/: CMakeLists.txt  main.cpp
QT6_ep25_sharing-resources-bwtween-threads/: CMakeLists.txt  main.cpp  worker.cpp  worker.h
QT6_ep26_Multithreaded-strategies-widgets/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  main.cpp
QT6_ep26_multithread-strategies/: CMakeLists.txt  main.cpp  worker.cpp  worker.h
QT6_ep28_widgets/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
QT6_ep29_QtQuick-QML/: CMakeLists.txt  Main.qml  calculate.cpp  calculate.h  main.cpp
QT6_ep6_parent-child-relationship/: CMakeLists.txt  main.cpp  test.cpp
QT6_ep7_qDeleteAll/: CMakeLists.txt  main.cpp  test.cpp  test.h
QT6_ep8_smart-pointer/: CMakeLists.txt  main.cpp  test.cpp  test.h
Qt6_ep9_QString/: CMakeLists.txt  main.cpp
Qt6_test_widgets/: CMakeLists.txt  mainwindow.ui
build-QObject-Desktop_Qt_6_5_0_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  QObject.ilk  build.ninja  cmake_install.cmake
build-QObject_2-Desktop_Qt_6_5_0_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  QObject_2.ilk  build.ninja  cmake_install.cmake
build-QT6_ep14_Qt-style-input-output-Desktop_Qt_6_5_0_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  QT6_ep14_Qt-style-input-output.ilk  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-QT6_ep16_OS-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-QT6_ep21_QThread-Desktop_Qt_6_5_0_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  QT6_ep21_QThread.ilk  build.ninja  cmake_install.cmake
build-QT6_ep22_threads-communication-Desktop_Qt_6_5_0_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  QT6_ep22_threads-communication.ilk  build.ninja  cmake_install.cmake
hello_world/: CMakeLists.txt  main.cpp
(+394 files in other folders)
